[package]
name = "fang"
version = "0.8.0"
authors = ["Ayrat Badykov <ayratin555@gmail.com>" , "Pepe Márquez <pepe.marquezromero@gmail.com>"]
description = "Background job processing library for Rust"
repository = "https://github.com/ayrat555/fang"
edition = "2021"
license = "MIT"
readme = "README.md"
rust-version = "1.62"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["blocking", "asynk"]
blocking = ["diesel", "diesel-derive-enum", "dotenv"]
asynk = ["bb8-postgres",  "postgres-types", "tokio", "async-trait", "typed-builder", "async-recursion"]

[dependencies]
chrono = "0.4"
log = "0.4"
serde = "1"
serde_derive = "1.0.141"
serde_json = "1"
thiserror = "1.0"
typetag = "0.2"
uuid = { version = "0.8", features = ["v4"] }


[dependencies.diesel]
version = "1.4"
features = ["postgres", "serde_json", "chrono", "uuidv07", "r2d2"]
optional = true

[dependencies.diesel-derive-enum]
version = "1"
features = ["postgres"]
optional = true

[dependencies.dotenv]
version = "0.15"
optional = true

[dependencies.bb8-postgres]
version = "0.8"
features = ["with-serde_json-1" , "with-uuid-0_8" , "with-chrono-0_4"]
optional = true

[dependencies.postgres-types]
version = "0.2.4"
features = ["derive"]
optional = true

[dependencies.tokio]
version = "1.20"
features = ["rt", "time", "macros"]
optional = true

[dependencies.async-trait]
version = "0.1"
optional = true

[dependencies.typed-builder]
version = "0.10"
optional = true

[dependencies.async-recursion]
version = "1"
optional = true
