[package]
name = "fang-derive-error"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
proc-macro = true

[dependencies]
syn = {version="2.0",features=["full","fold"]}
quote = "1.0"

[dev-dependencies]
fang = { path = "../fang" }
