[package]
name = "fang"
version = "0.10.4"
authors = ["Ayrat Badykov <ayratin555@gmail.com>" , "Pepe Márquez <pepe.marquezromero@gmail.com>"]
description = "Background job processing library for Rust"
repository = "https://github.com/ayrat555/fang"
edition = "2021"
license = "MIT"
readme = "README.md"
rust-version = "1.62"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false

[features]
default = ["blocking", "asynk", "derive-error", "postgres", "mysql" , "sqlite", "migrations_postgres", "migrations_sqlite" , "migrations_mysql"]
blocking = ["dep:diesel", "dep:diesel-derive-enum", "dep:dotenvy", "diesel?/chrono" , "diesel?/serde_json"]
asynk = ["dep:bb8-postgres", "dep:postgres-types", "dep:tokio", "dep:async-trait", "dep:async-recursion"]
derive-error = ["dep:fang-derive-error"]
postgres = ["diesel?/postgres" , "diesel?/serde_json", "diesel?/chrono" , "diesel?/uuid" , "diesel?/r2d2"]
sqlite = ["diesel?/sqlite" , "diesel?/serde_json", "diesel?/chrono" , "diesel?/uuid" , "diesel?/r2d2"]
mysql = ["diesel?/mysql" , "diesel?/serde_json", "diesel?/chrono" , "diesel?/uuid" , "diesel?/r2d2"]
migrations_postgres = ["migrations"]
migrations_sqlite = ["migrations"]
migrations_mysql = ["migrations"]
migrations = ["dep:diesel_migrations"]


[dev-dependencies]
fang-derive-error = { version = "0.1.0"}
diesel_migrations = { version = "2.1" , features = ["postgres", "sqlite" , "mysql"]}

[dependencies]
cron = "0.12"
chrono = "0.4"
hex = "0.4"
log = "0.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
sha2 = "0.10"
thiserror = "1.0"
typed-builder = "0.14"
typetag = "0.2"
uuid = { version = "1.1", features = ["v4"] }
fang-derive-error = { version = "0.1.0" , optional = true}

[dependencies.diesel]
version = "2.1"
optional = true
default-features = false

[dependencies.diesel-derive-enum]
version = "2.1"
features = ["postgres"]
optional = true

[dependencies.dotenvy]
version = "0.15"
optional = true

[dependencies.bb8-postgres]
version = "0.8"
features = ["with-serde_json-1" , "with-uuid-1" , "with-chrono-0_4"]
optional = true

[dependencies.postgres-types]
version = "0.X.X"
features = ["derive"]
optional = true

[dependencies.tokio]
version = "1.25"
features = ["rt", "time", "macros"]
optional = true

[dependencies.async-trait]
version = "0.1"
optional = true

[dependencies.async-recursion]
version = "1"
optional = true

[dependencies.diesel_migrations]
version = "2.1.0"
optional = true
default-features = false