[package]
name = "fang"
version = "0.11.0-rc0"
authors = ["Ayrat Badykov <ayratin555@gmail.com>" , "Pepe Márquez <pepe.marquezromero@gmail.com>"]
description = "Background job processing library for Rust"
repository = "https://github.com/ayrat555/fang"
edition = "2021"
license = "MIT"
readme = "README.md"
rust-version = "1.77"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false

[features]
default = ["blocking", "asynk-sqlx", "derive-error", "blocking-postgres", "blocking-mysql" , "blocking-sqlite", "migrations-postgres", "migrations-sqlite", "migrations-mysql"]
asynk-postgres = ["asynk-sqlx" , "sqlx?/postgres"]
asynk-sqlite = ["asynk-sqlx" , "sqlx?/sqlite"]
asynk-mysql = ["asynk-sqlx"  , "sqlx?/mysql"]
asynk-sqlx = ["asynk" , "dep:sqlx"]
asynk = ["dep:tokio", "dep:async-trait", "dep:async-recursion" ]
derive-error = ["dep:fang-derive-error"]
blocking = ["dep:diesel", "dep:diesel-derive-enum", "dep:dotenvy", "diesel?/chrono" , "diesel?/serde_json" , "diesel?/uuid", "diesel?/r2d2"]
blocking-postgres = [ "blocking", "diesel?/postgres"]
blocking-sqlite = ["blocking", "diesel?/sqlite" ]
blocking-mysql = [ "blocking", "diesel?/mysql"]
migrations-postgres = ["migrations"]
migrations-sqlite = ["migrations"]
migrations-mysql = ["migrations"]
migrations = ["dep:diesel_migrations"]


[dev-dependencies]
fang-derive-error = { version = "0.1.0"}
diesel_migrations = { version = "2.1" , features = ["postgres", "sqlite" , "mysql"]}
sqlx = {version = "0.6.3", features = ["any" , "macros" , "chrono", "runtime-tokio-rustls", "postgres", "sqlite", "mysql"]}
#console-subscriber = "0.2.0" # for tokio tracing debug

[dependencies]
cron = "0.12"
chrono = "0.4"
hex = "0.4"
log = "0.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
sha2 = "0.10"
thiserror = "1.0"
typed-builder = "0.14"
typetag = "0.2"
uuid = { version = "1.1", features = ["v4"] }
fang-derive-error = { version = "0.1.0" , optional = true}
sqlx = {version = "0.6.3", features = ["any" , "macros" , "chrono", "runtime-tokio-rustls"], optional = true}

[dependencies.diesel]
version = "2.1"
optional = true
default-features = false

[dependencies.diesel-derive-enum]
version = "2.1"
features = ["postgres"]
optional = true

[dependencies.dotenvy]
version = "0.15"
optional = true

[dependencies.tokio]
version = "1.25"
features = ["rt", "time", "macros"]#, "tracing"]
optional = true

[dependencies.async-trait]
version = "0.1"
optional = true

[dependencies.async-recursion]
version = "1"
optional = true

[dependencies.diesel_migrations]
version = "2.1.0"
optional = true
default-features = false
