[package]
name = "simple_worker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fang = { path = "../../../" , features = ["blocking"]}
dotenvy = "0.15"
env_logger = "0.9.0"
log = "0.4.0"
diesel = { version = "2", features = ["postgres", "r2d2"] }
